test/integration/bad/lang/incomplete14.stan
functions {
  real foo(int , real x) {
    return y + x;
  }
}
